<resources>
    <string name="app_name">FoodYum</string>

    <string name="home">Trang chủ</string>
    <string name="favourite">Yêu thích</string>
    <string name="account">Tài khoản</string>
    <string name="my_cart">Giỏ hàng</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="support">Hỗ trợ</string>
    <string name="order_payed">Đơn hàng</string>
    <string name="default_email">account@gmail.com</string>
    <string name="voucher">Voucher</string>
    <string name="recommended">Recommended</string>
    <string name="discount">Giảm giá</string>
    <string name="favourite_food">Món Ăn Yêu Thích</string>
    <string name="order_history">Lịch sử đơn hàng</string>
    <string name="feedback">Phản Hồi - Đánh Giá</string>
    <string name="log_out">Đăng Xuất</string>
    <string name="setting">Cài Đặt</string>
    <string name="text_favourite">10 Weekend Delicious \n Dinner Recipes</string>
    <string name="view_more">View more</string>
    <string name="text2_favourite">Your favorite and testy food is here</string>
    <string name="payment">Thanh Toán</string>
    <string name="price">Giá</string>
    <string name="quantity">SL</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="breakfast">Breakfast</string>
    <string name="description_default">Mô tả mô tả</string>
    <string name="food_name">Food Name</string>
    <string name="name">Name</string>
    <string name="price_default">0.0</string>
    <string name="total_price">Total Price</string>

    <string name="categories">Categories</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="remember_me">Remember me</string>
    <string name="do_not_have_acc">Chưa có tài khoản?</string>
    <string name="email">Email</string>
    <string name="confirm_pass">Nhập lại mật khẩu</string>
    <string name="pass">Mật khẩu</string>
    <string name="already_register">Đã có tài khoản?</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet_connection">Không có kết nối Internet</string>
    <string name="please_check_your_connection">Vui lòng kiểm tra kết nối của bạn !!</string>
    <string name="retry">Thử lại</string>
    <string name="todo">TODO</string>
    <string name="recently_added">Được thêm gần đây</string>
    <string name="search_your_favorite_food">Search Your Favorite Food</string>
    <string name="text_search">Bạn đang cần gì ?</string>
    <string name="rice">Cơm</string>
    <string name="default_rate">4.8</string>
    <string name="default_time">10:00–7:00</string>
    <string name="default_price">45.0000đ</string>
    <string name="rice_en">Cơm / Rice</string>
    <string name="default_product">Cơm sườn hảo hạng</string>
    <string name="default_quantity_sold">(100+)</string>
    <string name="default_distance">0.5km</string>
    <string name="sort">Sắp xếp</string>
    <string name="most_recent">Gần nhất</string>
    <string name="good_review">Đánh giá tốt</string>
    <string name="popular">Phổ biến</string>
    <string name="best_selling">Bán chạy nhất</string>
    <string name="vi">VI</string>
    <string name="add_to_cart">Thêm vào\n giỏ hàng</string>
    <string name="default_total_price">$ 0</string>
    <string name="default_description">Mô tả:</string>
    <string name="default_time_delay">20 phút</string>
    <string name="default_title">Tên sản phẩm</string>
    <string name="default_quantity">1</string>
    <string name="default_calo">70 calories</string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="submit">Submit</string>
    <string name="cancel">Huỷ</string>
    <string name="default_name_restaurant">Cơm Rang - Mì Xào - Trần Quốc Hoàn </string>
    <string name="please_wait">Xin chờ</string>
    <string name="dot">•</string>
    <string name="partner">Đối tác của FoodYum</string>
    <string name="default_address">Cổ nhuế 2 Nam Từ Liêm Hà Nội</string>
    <string name="not_open_yet">Chưa mở cửa</string>
    <string name="open_time">Mở 7:10 PM</string>
    <string name="default_discount">Cơm Rang - Mì Xào - Trần Quốc Hoàn giảm giá 15% cho tất cả các món ăn 😆</string>
    <string name="default_add_to_cart">Thêm • 456.000đ</string>
    <string name="default_description_detail">Suất cơm gồm cơm trắng, gà sốt tiêu siêu ngon(hết đùi quán đổi sang má đùi), rau củ theo mùa, dụng cụ ăn uống.</string>
    <string name="price_new">456.000đ</string>
    <string name="notes">Bạn có muốn nhắn gì với nhà hàng không ?</string>
    <string name="default_value_discount">10%</string>
    <string name="search">Tìm kiếm</string>
    <string name="payment_page">Trang thanh toán</string>
    <string name="order">Đặt hàng</string>
    <string name="address">Địa chỉ nhận hàng</string>
    <string name="customer_name">Họ tên KH |</string>
    <string name="phone">Số điện thoại</string>
    <string name="address_detail">Địa chỉ nhận hàng</string>
    <string name="cash">Tiền mặt</string>
    <string name="add_coupon">Thêm coupon</string>
    <string name="fees_apply">Phí áp dụng</string>
    <string name="transport_fee">Phí vận chuyển</string>
    <string name="service_charge">Phí dịch vụ</string>
    <string name="default_service_charge">2.000đ</string>
    <string name="coupons">Coupons</string>
    <string name="select">Chọn</string>
    <string name="expiry">HSD: 29.03.2023</string>
    <string name="decrease">Giảm</string>
    <string name="apply">Áp dụng</string>
    <string name="enter_discount_code">Nhập mã giảm giá ở đây</string>
    <string name="info_acc">Thông tin tài khoản</string>
    <string name="default_name">Nguyễn Văn A</string>
    <string name="delivered">Đã giao</string>
    <string name="cancelled">Đã huỷ</string>
    <string name="waiting">Đang chờ</string>
    <string name="request">Request</string>
    <string name="code">Code</string>
    <string name="order_management">Quản lí đơn hàng</string>
    <string name="cart">cart</string>
    <string name="name_vi">Tên</string>
    <string name="email_vi">Địa chỉ Email</string>
    <string name="gender">Giới tính</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Lưu</string>
    <string name="out_of_stock">Tạm hết hàng</string>


</resources>